Closed Bug 822219 Opened 13 years ago Closed 13 years ago

BaselineCompiler: Fix bug563125.js jit-test failure

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jandem, Assigned: jandem)

References

Details

Attachments

(1 file)

Attached patch PatchSplinter Review
We fail jit-test/tests/basic/bug563125.js, problem is that the dense array length does not necessarily fit in an int32. I've been spoiled by TI, which doesn't track dense arrays with length > INT32_MAX as known-dense-arrays.
Attachment #692909 - Flags: review?(kvijayan)
Attachment #692909 - Flags: review?(kvijayan) → review+
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: