Bug 822219 - Fix array.length stub to handle arrays with length > INT32_MAX correctly. r=djvj